# polars

./: .gitignore  Cargo.toml  crates.js  source-files.js
arrow2/: all.html  enum.Either.html  struct.AHashMap.html
bytemuck/: derive.AnyBitPattern.html  derive.Zeroable.html
bytemuck_derive/: derive.AnyBitPattern.html  derive.Zeroable.html  index.html
crates/polars-opendal/: Cargo.toml
crates/polars-opendal/src/: reader.rs
crossbeam_channel/: index.html
crossbeam_deque/: enum.Steal.html  index.html  struct.Injector.html  struct.Stealer.html  struct.Worker.html
crossbeam_epoch/: fn.unprotected.html  index.html  struct.Atomic.html  struct.Guard.html  struct.Owned.html  struct.Shared.html  trait.Pointer.html
crossbeam_utils/: index.html  struct.Backoff.html
dyn_clone/: all.html  fn.arc_make_mut.html  fn.clone.html  fn.clone_box.html  fn.rc_make_mut.html  index.html  trait.DynClone.html
foreign_vec/: all.html  index.html  struct.ForeignVec.html
hashbrown/: index.html
polars/: all.html  fn.toggle_string_cache.html  index.html
polars_core/: all.html  fn.reset_string_cache.html  fn.toggle_string_cache.html  fn.with_string_cache.html  index.html  static.POOL.html  static.SINGLE_LOCK.html  struct.StrHashGlobal.html
polars_io/: all.html  index.html  struct.RowCount.html  trait.ArrowReader.html  trait.SerReader.html  trait.SerWriter.html  trait.WriterFactory.html
polars_ops/: all.html
polars_time/: enum.ClosedWindow.html  struct.Duration.html  struct.DynamicGroupOptions.html  struct.RollingGroupOptions.html  struct.Window.html
rustversion/: index.html
(+5181 files in other folders)
